<resources>
    <string name="app_name">TampaX &#x2713;</string>
    <string name="title_activity_face_emo_detect">FaceEmoDetectActivity</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="upload_a_picture">Upload a picture</string>
    <string name="title_activity_cam_detect">CamDetectActivity</string>
    <string name="title_activity_lets_start">LetsStart</string>
    <string name="title_activity_let_start">LetStartActivity</string>
    <string name="title_activity_r1">Question 1</string>
    <string name="title_activity_r2">Question 2</string>
    <string name="title_activity_r3">Question 3</string>
    <string name="title_activity_r4">Question 4</string>
    <string name="title_activity_r5">Question 5</string>
    <string name="title_activity_r6">Question 6</string>
    <string name="title_activity_r7">Question 7</string>
    <string name="title_activity_r8">Insertion Feedback</string>
    <string name="front_cam_on">Front Cam On</string>
    <string name="back_cam_on">Back Cam On</string>

    <string name="age_under_18">age: under 18</string>
    <string name="age_18_24">age: 18–24</string>
    <string name="age_25_34">age: 25–34</string>
    <string name="age_35_44">age: 35–44</string>
    <string name="age_45_54">age: 45–54</string>
    <string name="age_55_64">age: 55–64</string>
    <string name="age_over_64">age: 65+</string>
    <string name="ethnicity_caucasian">Caucasian</string>
    <string name="ethnicity_black_african">Black African</string>
    <string name="ethnicity_east_asian">East Asian</string>
    <string name="ethnicity_south_asian">South Asian</string>
    <string name="ethnicity_hispanic">Hispanic</string>
    <string name="capture">Capture</string>
    <string name="hey_gal_lets_get_started">Hi there, let\'s get started...</string>
    <string name="wanna_remove_or_insert_a_tampon">Do you want to remove or insert a tampon?</string>
    <string name="insert">Insert</string>
    <string name="remove">Remove</string>
    <string name="hours_of_insertion">Approximately how many hours did you wear the tampon?</string>
    <string name="_3"><![CDATA[> 3]]></string>
    <string name="_0_3">0 - 3</string>
    <string name="leak">Did you experience a leak while wearing the tampon?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="any_discomfort">Now remove the tampon.\nDid you experience any discomfort during removal?</string>
    <string name="another_tampon">Will you be inserting another tampon now?</string>
    <string name="next_menstrual_flow">During the next few hours, do you expect your menstrual flow to:</string>
    <string name="decrease">Decrease</string>
    <string name="stay_same">Stay the same</string>
    <string name="increase">Increase</string>
    <string name="low_or_resting">Low or resting</string>
    <string name="high_or_exercising">High or exercising</string>
    <string name="sleeping_upto_8_hours">Sleeping (Upto 8 hours)</string>
    <string name="moderate_or_sitting">Moderate or sitting</string>
    <string name="activity_level">During the next few hours, what do you expect your activity level to be?</string>
    <string name="get_the_recommendation_for_the_optimal_absorbency_of_your_next_tampon">Click continue to get recommendation of the optimal absorbency of your next tampon!</string>
    <string name="continue_">Continue...</string>
    <string name="our_suggestion">Our suggestion ...</string>
    <string name="which_tampon_you_chose">You should always use the lowest absorbency
        that meets your needs and use it for no longer than 8 hours.\nWhich absorbency tampon did you insert?</string>
    <string name="lite">Lite</string>
    <string name="regular">Regular</string>
    <string name="super_">Super</string>
    <string name="super_plus">Super Plus</string>
    <string name="ultra">Ultra</string>
    <string name="end">End</string>
    <string name="please_take_a_picture_of_yours_and_record_your_emotions_right_now">Please take a picture of yours to record your current emotions...</string>
    <string name="title_activity_result_summary">Your Personalized Summary</string>
    <string name="your_confidence_level">Your Confidence Level</string>
    <string name="your_calculated_flow_level">Your Calculated Flow Level</string>
    <string name="next">Next</string>
</resources>
